# ALBA

./: Build.bat  CMakeLists.txt  CMakeLists_old.txt  COPYRIGHT.txt  FindCppUnit.cmake  FindMAF.cmake  HowToBuild.txt  JenkisBuildForce.txt  MAFConfig.cmake.in  MAFUse.cmake.in  MEDConfig.cmake.in  MEDUse.cmake.in  OpenMaf_licence model.doc  README.md  README.txt  RemoveDeletedH.py  VistaPatchesForMAF2.rtf  albaConfig.cmake.in  albaConfigure.h.in  albaUse.cmake.in  license.txt  mafConfigure.h.in  medDefines.h.in
Base/: CMakeLists.txt  albaBase.h  albaDataChecksum.h  albaDbg.h  albaDecl.cpp  albaDecl.h  albaDefines.cpp  albaDefines.h  albaDirectory.cpp  albaDirectory.h  albaDllMacros.h  albaDynamicLoader.cpp  albaDynamicLoader.h  albaEventBase.cpp  albaEventBase.h  albaEventBroadcaster.cpp  albaEventBroadcaster.h  albaEventSender.h  albaIncludeWIN32.h  albaIncludeWX.h  albaIndent.cpp  albaIndent.h  albaLUTLibrary.cpp  albaLUTLibrary.h  albaMTime.cpp  albaMTime.h  albaMatrix.cpp  albaMatrix.h  albaMatrix3x3.cpp  albaMatrix3x3.h  albaMultiThreader.cpp  albaMultiThreader.h  albaMutexLock.cpp  albaMutexLock.h  albaOBB.cpp  albaOBB.h  albaObject.cpp  albaObject.h  albaObjectFactory.cpp  albaObjectFactory.h  (+108 more)
Common/: CMakeLists.txt  albaCurvilinearAbscissaOnSkeletonHelper.cpp  albaCurvilinearAbscissaOnSkeletonHelper.h  albaGeometryUtils.cpp  albaGeometryUtils.h  albaHTMLTemplateParser.cpp  albaHTMLTemplateParser.h  albaHTMLTemplateParserBlock.cpp  albaHTMLTemplateParserBlock.h  albaHelpManager.cpp  albaHelpManager.h  albaItkRawMotionImporterUtility.cxx  albaItkRawMotionImporterUtility.h  albaLicenceManager.cpp  albaLicenceManager.h  albaPolylineGraph.cpp  albaPolylineGraph.h  albaProsthesesDBManager.cpp  albaProsthesesDBManager.h  albaQueryObject.h  albaRelationalDatabaseAbstractConnector.cpp  albaRelationalDatabaseAbstractConnector.h  albaResultQueryAbstractHandler.cpp  albaResultQueryAbstractHandler.h  albaSnapshotManager.cpp  albaSnapshotManager.h  albaTextFileReaderHelper.cpp  albaTextFileReaderHelper.h  albaWizard.cpp  albaWizard.h  albaWizardBlock.cpp  albaWizardBlock.h  albaWizardBlockFileExistCheck.cpp  albaWizardBlockFileExistCheck.h  albaWizardBlockInformation.cpp  albaWizardBlockInformation.h  albaWizardBlockOperation.cpp  albaWizardBlockOperation.h  albaWizardBlockSelection.cpp  albaWizardBlockSelection.h  (+129 more)
Core/: CMakeLists.txt  Configure.h.in  albaAbsMatrixPipe.cpp  albaAbsMatrixPipe.h  albaAttribute.cpp  albaAttribute.h  albaAttributeTraceability.cpp  albaAttributeTraceability.h  albaAxes.cpp  albaAxes.h  albaCoreFactory.cpp  albaCoreFactory.h  albaDataPipe.cpp  albaDataPipe.h  albaEventIO.cpp  albaEventIO.h  albaGUIContextualMenu.cpp  albaGUIContextualMenu.h  albaGUIListCtrlBitmap.cpp  albaGUIListCtrlBitmap.h  albaGUIMaterialButton.cpp  albaGUIMaterialButton.h  albaGUIMaterialChooser.cpp  albaGUIMaterialChooser.h  albaGUITreeContextualMenu.cpp  albaGUITreeContextualMenu.h  albaGUIVMEChooser.cpp  albaGUIVMEChooser.h  albaGUIVMEChooserTree.cpp  albaGUIVMEChooserTree.h  albaLODActor.cpp  albaLODActor.h  albaLogicWithManagers.cpp  albaLogicWithManagers.h  albaMatrixPipe.cpp  albaMatrixPipe.h  albaOp.cpp  albaOp.h  albaOpContextStack.cpp  albaOpContextStack.h  (+337 more)
GPUAPI/: CMakeLists.txt  GPU_OGL.cpp  GPU_OGL.h
Gui/: CMakeLists.txt  Configure.h.in  albaAbsSideBar.h  albaAnimate.cpp  albaAnimate.h  albaAttachCamera.cpp  albaAttachCamera.h  albaColor.cpp  albaColor.h  albaCursor.cpp  albaCursor.h  albaEvent.cpp  albaEvent.h  albaGUI.cpp  albaGUI.h  albaGUIAboutDialog.cpp  albaGUIAboutDialog.h  albaGUIApplicationSettings.cpp  albaGUIApplicationSettings.h  albaGUIBusyInfo.cpp  albaGUIBusyInfo.h  albaGUIButton.cpp  albaGUIButton.h  albaGUICheckListBox.cpp  albaGUICheckListBox.h  albaGUICheckTree.cpp  albaGUICheckTree.h  albaGUIColorSwatch.cpp  albaGUIColorSwatch.h  albaGUIColorWidget.cpp  albaGUIColorWidget.h  albaGUIComboBox.cpp  albaGUIComboBox.h  albaGUICrossIncremental.cpp  albaGUICrossIncremental.h  albaGUICrossSplitter.cpp  albaGUICrossSplitter.h  albaGUIDialog.cpp  albaGUIDialog.h  albaGUIDialogAskAndRemember.cpp  (+447 more)
IO/: CMakeLists.txt  albaCurlUtility.cpp  albaCurlUtility.h  albaStorable.cpp  albaStorable.h  albaStorage.cpp  albaStorage.h  albaStorageElement.cpp  albaStorageElement.h  albaXMLElement.cpp  albaXMLElement.h  albaXMLStorage.cpp  albaXMLStorage.h  albaXMLString.cpp  albaXMLString.h  mafBrickedFile.cpp  mafBrickedFile.h  mafBrickedFileReader.cpp  mafBrickedFileReader.h  mafBrickedFileWriter.cpp  mafBrickedFileWriter.h  mafCurlUtility.cpp  mafCurlUtility.h  mafStorable.cpp  mafStorable.h  mafStorage.cpp  mafStorage.h  mafStorageElement.cpp  mafStorageElement.h  mafStorageReader.cpp  mafStorageReader.h  mafStorageWriter.cpp  mafStorageWriter.h  mafVolumeLargeReader.h  mafVolumeLargeWriter.cpp  mafVolumeLargeWriter.h  mafXMLElement.cpp  mafXMLElement.h  mafXMLReader.cpp  mafXMLReader.h  (+10 more)
Interaction/: CMakeLists.txt  albaAction.cpp  albaAction.h  albaActor2dStackHelper.cpp  albaActor2dStackHelper.h  albaAgent.cpp  albaAgent.h  albaAgentEventHandler.cpp  albaAgentEventHandler.h  albaAgentEventQueue.cpp  albaAgentEventQueue.h  albaAgentThreaded.cpp  albaAgentThreaded.h  albaAvatar.cpp  albaAvatar.h  albaAvatar2D.cpp  albaAvatar2D.h  albaAvatar3D.cpp  albaAvatar3D.h  albaAvatar3DCone.cpp  albaAvatar3DCone.h  albaCameraTransform.cpp  albaCameraTransform.h  albaDevice.cpp  albaDevice.h  albaDeviceButtonsPad.cpp  albaDeviceButtonsPad.h  albaDeviceButtonsPadMouse.cpp  albaDeviceButtonsPadMouse.h  albaDeviceButtonsPadMouseDialog.cpp  albaDeviceButtonsPadMouseDialog.h  albaDeviceButtonsPadTracker.cpp  albaDeviceButtonsPadTracker.h  albaDeviceButtonsPadTrackerP5Glove.cpp  albaDeviceButtonsPadTrackerP5Glove.h  albaDeviceManager.cpp  albaDeviceManager.h  albaDeviceSet.cpp  albaDeviceSet.h  albaDeviceTrackerWIIMote.cpp  (+460 more)
Operations/: CMakeLists.txt  CMakeLists.txt.bak  albaASCIIImporterUtility.cpp  albaASCIIImporterUtility.h  albaComputeHausdorffDistance.cpp  albaComputeHausdorffDistance.h  albaDicomTagDefines.h  albaGeometryEditorPolylineGraph.cpp  albaGeometryEditorPolylineGraph.h  (+934 more)
(+5767 files in other folders)
